# as5047d

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: README.md  stm32_basic.rs
src/: diagnostics.rs  driver.rs  error.rs  lib.rs  register.rs  utils.rs
tests/: integration_tests.rs
