[package]
name = "as5047d"
version = "0.1.0"
edition = "2024"
authors = ["Adrian Wowk <adrian@adom.inc>", "Sam Collins <sam@scollins.co>"]
description = "Driver for AS5047D 14-bit absolute magnetic rotary position sensor with SPI interface"
repository = "https://github.com/adom-inc/as5047d"
documentation = "https://docs.rs/as5047d"
readme = "README.md"
license = "MIT"
keywords = ["embedded", "sensor", "spi", "as5047d"]
categories = ["embedded", "hardware-support", "no-std"]
autoexamples = false
include = [
    "src/**",
]

[dependencies]
bitfield = "0.19.4"
embedded-hal = "1.0"

defmt = { version = "1.0", optional = true }
